<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large">

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cr_er_un_compte"
            android:textColor="@color/silver_blue"
            android:textSize="@dimen/text_size_title"
            android:fontFamily="@font/alata"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/et_reg_prenom"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/pr_nom"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/tv_register_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"/>

        <EditText
            android:id="@+id/et_reg_nom"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/nom"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_reg_prenom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/et_reg_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/adresse_email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_reg_nom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/et_reg_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_reg_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/et_reg_dob"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/date_de_naissance"
            android:inputType="date"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_reg_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/et_reg_phone"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/num_ro_de_t_l_phone"
            android:inputType="phone"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_reg_dob"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/et_reg_address"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/adresse"
            android:inputType="textPostalAddress"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_reg_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/et_reg_city"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/ville"
            android:inputType="text"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_reg_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/et_reg_zip"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/code_postal"
            android:inputType="number"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_reg_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/et_reg_country"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/pays"
            android:inputType="text"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_reg_zip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btn_submit_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:text="@string/s_inscrire"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:background="@drawable/bg_button_blue"
            app:layout_constraintTop_toBottomOf="@id/et_reg_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/tv_cancel_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:textColor="@color/silver_blue"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toBottomOf="@id/btn_submit_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>