<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large">

        <TextView
            android:id="@+id/tv_edit_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mes_informations"
            android:textColor="@color/silver_blue"
            android:textSize="@dimen/text_size_subtitle"
            android:fontFamily="@font/alata"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/et_edit_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/votre_nom_et_pr_nom"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"/>

        <EditText
            android:id="@+id/et_edit_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/adresse_email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_edit_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_standard"/>

        <EditText
            android:id="@+id/et_edit_dob"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/date_de_naissance"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_edit_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_standard"/>

        <EditText
            android:id="@+id/et_edit_phone"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/num_ro_de_t_l_phone"
            android:inputType="phone"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_edit_dob"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_standard"/>

        <EditText
            android:id="@+id/et_edit_address"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/adresse"
            android:inputType="textPostalAddress"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_edit_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_standard"/>

        <EditText
            android:id="@+id/et_edit_zip"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/code_postal"
            android:inputType="number"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_edit_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_standard"/>

        <EditText
            android:id="@+id/et_edit_city"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/ville"
            android:inputType="text"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_edit_zip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_standard"/>

        <EditText
            android:id="@+id/et_edit_country"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:hint="@string/pays"
            android:inputType="text"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:backgroundTint="@color/silver_blue"
            app:layout_constraintTop_toBottomOf="@id/et_edit_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_standard"/>

        <Button
            android:id="@+id/btn_save_profile"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:text="@string/enregistrer"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:background="@drawable/bg_button_blue"
            app:layout_constraintTop_toBottomOf="@id/et_edit_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/tv_cancel_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:textColor="@color/silver_blue"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toBottomOf="@id/btn_save_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>