<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/margin_large">

    <Button
        android:id="@+id/btn_back_profile"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:textColor="@color/silver_blue"
        android:fontFamily="@font/alata"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_profile_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mon_profil"
        android:textColor="@color/silver_blue"
        android:textSize="@dimen/text_size_title"
        android:fontFamily="@font/alata"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btn_back_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/ll_personal_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_light"
        android:padding="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/votre_nom_et_pr_nom"
            android:textColor="@color/silver_blue"
            android:textSize="16sp"
            android:fontFamily="@font/alata" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/silver_blue"
            android:textSize="@dimen/text_size_subtitle"
            android:fontFamily="@font/alata"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adresse_email"
            android:textColor="@color/silver_blue"
            android:textSize="16sp"
            android:fontFamily="@font/alata" />

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/silver_blue"
            android:textSize="@dimen/text_size_body"
            android:fontFamily="@font/alata" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/modifier_mes_informations"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_body"
        android:fontFamily="@font/alata"
        android:background="@drawable/bg_button_yellow"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/btn_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/se_d_connecter"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_body"
        android:fontFamily="@font/alata"
        android:background="@drawable/bg_button_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>