<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/margin_standard">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_profile"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mon_profil"
        android:textColor="@color/silver_blue"
        android:fontFamily="@font/alata"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/ll_menu_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/btn_go_profile"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btn_tab_events"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/v_nements"
            android:textColor="@color/white"
            android:background="@drawable/bg_button_blue"
            app:backgroundTint="@null"
            android:fontFamily="@font/alata"
            android:layout_marginEnd="2dp"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btn_tab_services"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/services"
            android:textColor="@color/silver_blue"
            android:background="@drawable/bg_button_yellow"
            app:backgroundTint="@null"
            android:fontFamily="@font/alata"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btn_tab_conseils"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/conseils"
            android:textColor="@color/white"
            android:background="@drawable/bg_button_blue"
            app:backgroundTint="@null"
            android:fontFamily="@font/alata"
            android:layout_marginStart="2dp"
            android:textSize="12sp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_activities"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ll_menu_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_large"/>

</androidx.constraintlayout.widget.ConstraintLayout>